--- a/src/index.html
+++ b/src/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Nault</title>
+  <title>KOTAI-Wallet</title>
   <base href="/">
 
-  <meta property="og:title" content="Nault" />
-  <meta name="author" content="The Nano Community" />
-  <meta name="description" content="A client-side open source wallet for nano, focused on security, speed and robustness" />
-  <meta property="og:description" content="A client-side open source wallet for nano, focused on security, speed and robustness" />
+  <meta property="og:title" content="KOTAI-Wallet" />
+  <meta name="author" content="The KOTAI Community" />
+  <meta name="description" content="A client-side open source wallet for KOTAI, focused on security, speed and robustness" />
+  <meta property="og:description" content="A client-side open source wallet for KOTAI, focused on security, speed and robustness" />
   <link rel="canonical" href="https://nault.cc/" />
   <meta property="og:url" content="https://nault.cc/" />
-  <meta property="og:site_name" content="Nault" />
+  <meta property="og:site_name" content="KOTAI" />
   <meta property="og:image" content="https://nault.cc/assets/img/preview.png?v=2" />
   <meta http-equiv="origin-trial" content="AozrsN92G0WwmBqku7WUVf+xPdSFZfsY1jxIhdALcDQQ/FsvFNCOI2fWPmN9cL8WP6PCdFPlDN4SnNlyZJ1XCA4AAABbeyJvcmlnaW4iOiJodHRwczovL25hdWx0LmNjOjQ0MyIsImZlYXR1cmUiOiJXZWJISUQiLCJleHBpcnkiOjE2MTQxMjQ3OTksImlzU3ViZG9tYWluIjp0cnVlfQ==">
 
@@ -31,8 +31,8 @@
   <link rel="manifest" href="assets/favicon/site.webmanifest">
   <link rel="mask-icon" href="assets/favicon/safari-pinned-tab.svg" color="#4a90e2">
   <link rel="shortcut icon" href="assets/favicon/favicon.ico">
-  <meta name="apple-mobile-web-app-title" content="Nault">
-  <meta name="application-name" content="Nault">
+  <meta name="apple-mobile-web-app-title" content="KOTAI">
+  <meta name="application-name" content="KOTAI">
   <meta name="msapplication-TileColor" content="#4a90e2">
   <meta name="msapplication-config" content="assets/favicon/browserconfig.xml">
   <meta name="theme-color" content="#22222A">
