--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>KOTAI-Wallet</title>
-  <base href="/">
+  <base href="./">
 
   <meta property="og:title" content="KOTAI-Wallet" />
   <meta name="author" content="The KOTAI Community" />
